[package]
name = "nft_pepethegame"
version = "0.2.4"
previous-authors = ["Brushfam <m.konstantinovna@727.ventures>"]
authors = [
    "Pepe dev",
]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }

# These dependencies
pendzl = { path = "../..", default-features = false, features = [
    "psp34_metadata_impl",
    "ownable_impl",
    "psp34_mintable_impl"
] }

[lib]
name = "nft_pepethegame"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "pendzl/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
