[package]
name = "pepeboost_pepethegame"
version = "0.2.4"
previous-authors = ["Brushfam <green@727.ventures>"]
authors = [
    "Pepe dev",
]
edition = "2021"


[dependencies]
ink = { version = "5.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }

# These dependencies
pendzl = { path = "../..", default-features = false, features = [
    "psp22_metadata_impl",
    "psp22_burnable_impl",
    "ownable_impl",
] }

[lib]
name = "pepeboost_pepethegame"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "pendzl/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
